Started Pressure sensor driver and finished writing the driver for temperature and Humidity

--- a/Intern_Project/Intern_Project.uvprojx
+++ b/Intern_Project/Intern_Project.uvprojx
@@ -453,6 +453,11 @@
               <FileType>1</FileType>
               <FilePath>.\Timing.c</FilePath>
             </File>
+            <File>
+              <FileName>LPS25HB.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\LPS25HB.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
