Started the accelerometer and gyro driver, still working on the magnetometer driver, having problems with setting to single conversion mode

--- a/Intern_Project/Intern_Project.uvprojx
+++ b/Intern_Project/Intern_Project.uvprojx
@@ -463,6 +463,11 @@
               <FileType>1</FileType>
               <FilePath>.\LIS3MDL.c</FilePath>
             </File>
+            <File>
+              <FileName>LSM6DS0.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\LSM6DS0.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
