Added ISK01A1 c file that checks if all sensors have initialized, started converting the magnetometer readings into a compass heading.

--- a/Intern_Project/Intern_Project.uvprojx
+++ b/Intern_Project/Intern_Project.uvprojx
@@ -468,6 +468,11 @@
               <FileType>1</FileType>
               <FilePath>.\LSM6DS0.c</FilePath>
             </File>
+            <File>
+              <FileName>ISK01A1.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\ISK01A1.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
