--- a/Intern_Project/Intern_Project.uvprojx
+++ b/Intern_Project/Intern_Project.uvprojx
@@ -478,6 +478,11 @@
               <FileType>1</FileType>
               <FilePath>.\FGPMMOPA6H.c</FilePath>
             </File>
+            <File>
+              <FileName>XBeePro24.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\XBeePro24.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
