--- a/Intern_Project/Intern_Project.uvprojx
+++ b/Intern_Project/Intern_Project.uvprojx
@@ -483,6 +483,11 @@
               <FileType>1</FileType>
               <FilePath>.\XBeePro24.c</FilePath>
             </File>
+            <File>
+              <FileName>PWM.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\PWM.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
